修复新版dependencies没sui ，默认从BuildInfo导入核心库

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,7 +4,7 @@
     <id>org.sui.lang</id>
     <name>Sui Move Language</name>
 
-    <vendor>MoveFuns</vendor>
+    <vendor>HOH</vendor>
 
     <description>
         <![CDATA[
